tests/golden/instances/instances/instances/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: app-instances
    name: app-instances
  name: app-instances
