tests/golden/instances/instances/instances/10_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: instances
    app.kubernetes.io/managed-by: commodore
    name: home-assistant
  name: home-assistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: instances
  type: ClusterIP
