tests/golden/instances/instances/instances/20_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: instances
    app.kubernetes.io/managed-by: commodore
    name: influxdb
  name: influxdb
spec:
  ports:
    - name: http
      port: 8086
      targetPort: 8086
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: instances
  type: ClusterIP
